--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,61 @@
 * {
+  margin: 0;
+  padding: 0;
   font-family: "Inter", sans-serif;
+}
+
+/* Common Style */
+a {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+.btn {
+    background-color: #469165;
+    padding: 12px 16px;
+    border-radius: 4px;
+}
+
+/* Header */
+.navbar{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid black;
+    padding: 16px 0;
+}
+.navbar ul {
+    display: flex;
+    gap: 20px;
+}
+.navbar ul li {
+    list-style: none;
+}
+.navbar a {
+    text-decoration: none;
+    color: #000;
+}
+
+/* Footer */
+.footer {
+  background: #0f172a;
+  color: #cbd5e1;
+  padding: 2rem 1rem;
+}
+.social-links {
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+}
+.footer-content {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+.footer-nav a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 14px;
+}
+.footer p {
+  text-align: center;
+  padding: 20px 0;
 }
