--- a/css/style.css
+++ b/css/style.css
@@ -6,35 +6,92 @@
 
 /* Common Style */
 a {
-    color: #FFFFFF;
-    text-decoration: none;
+  color: #ffffff;
+  text-decoration: none;
 }
 .btn {
-    background-color: #469165;
-    padding: 12px 16px;
-    border-radius: 4px;
+  background-color: #469165;
+  padding: 12px 16px;
+  border-radius: 4px;
+}
+h2 {
+  font-size: 48px;
+  font-weight: 700;
 }
 
 /* Header */
-.navbar{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border: 1px solid black;
-    padding: 16px 0;
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid black;
+  padding: 16px 0;
 }
 .navbar ul {
-    display: flex;
-    gap: 20px;
+  display: flex;
+  gap: 20px;
 }
 .navbar ul li {
-    list-style: none;
+  list-style: none;
 }
 .navbar a {
-    text-decoration: none;
-    color: #000;
+  text-decoration: none;
+  color: #000;
 }
-
+/* Hero */
+#hero {
+  text-align: center;
+  padding: 70px;
+  border: 1px solid rebeccapurple;
+  background-image: url("../assets/hero.png");
+  background-position: center top;
+  background-repeat: no-repeat;
+}
+.hero-content h1 {
+  font-size: 72px;
+  font-weight: 700;
+  color: #fff;
+}
+.hero-content span {
+  color: #469165;
+}
+.hero-content p {
+  margin: 20px auto;
+  width: 50%;
+  color: #fff;
+}
+.hero-action-area {
+  margin-top: 40px;
+}
+.see-how-works {
+  background-color: transparent;
+  border: 1px solid #ffffffa6;
+}
+/* Features */
+#features {
+  text-align: center;
+  padding: 120px 0;
+}
+#features header{
+    padding: 0 0 30px 0;
+}
+#features p {
+  color: #627382;
+}
+.features-list {
+  max-width: 1280px;
+  margin: 0 auto;
+  display: flex;
+  gap: 20px;
+}
+.features-list img, h3 {
+  margin-bottom: 10px;
+}
+.features-list article {
+  box-shadow: 0px 0px 8px 0px #0000000f;
+  padding: 20px;
+  border-radius: 8px;
+}
 /* Footer */
 .footer {
   background: #0f172a;
@@ -44,16 +101,16 @@ a {
 .social-links {
   display: flex;
   justify-content: space-between;
-  justify-items: center;
+  align-items: center;
 }
 .footer-content {
   max-width: 1280px;
   margin: 0 auto;
 }
-.footer-nav a{
-    text-decoration: none;
-    color: #fff;
-    font-size: 14px;
+.footer-nav a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 14px;
 }
 .footer p {
   text-align: center;
